2006-02-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* cfb/cfbfillarc.c:
	* cfb/cfbzerarc.c:
	* hw/xfree86/xaa/xaaFillArc.c:
	* hw/xfree86/exa/exa_offscreen.c:
	* mfb/mfbfillarc.c:
	* mfb/mfbzerarc.c:
	<sys/limits.h> -> <limits.h> so we can compile on non-BSD OS'es

2006-02-10  Eric Anholt  <anholt@FreeBSD.org>

	* GL/glx/Makefile.am:
	* GL/mesa/X/Makefile.am:
	* GL/mesa/array_cache/Makefile.am:
	* GL/mesa/glapi/Makefile.am:
	* GL/mesa/main/Makefile.am:
	* GL/mesa/math/Makefile.am:
	* GL/mesa/shader/Makefile.am:
	* GL/mesa/swrast/Makefile.am:
	* GL/mesa/swrast_setup/Makefile.am:
	* GL/mesa/tnl/Makefile.am:
	* hw/kdrive/src/kdrive.c: (xf86WrapperInit):
	* include/kdrive-config.h.in:
	Remove libcwrapper damage from GLX (requires fresh Mesa HEAD), and get
	it compiling in kdrive.

2006-02-10  Eric Anholt  <anholt@FreeBSD.org>

	* GL/glx/glxcmds.c:
	* GL/glx/glximports.c:
	* GL/glx/glxscreens.c:
	* GL/glx/glxutil.c:
	* GL/glx/indirect_util.c:
	* GL/glx/single2.c:
	* GL/include/GL/glx_ansic.h:
	* GL/include/GL/xf86glx.h:
	* GL/mesa/X/xf86glx_util.c:
	* XTrap/xtrapddmi.c:
	* XTrap/xtrapdi.c:
	* XTrap/xtrapditbl.c:
	* Xext/cup.c:
	* Xext/mbuf.c:
	* Xext/saver.c:
	* Xext/shape.c:
	* Xext/shm.c:
	* Xext/sync.c:
	* Xext/xtest.c:
	* Xext/xvdisp.c:
	* Xext/xvmain.c:
	* Xext/xvmc.c:
	* afb/afb.h:
	* afb/afbbitblt.c:
	* afb/afbblt.c:
	* afb/afbclip.c:
	* afb/afbgc.c:
	* afb/afbimage.c:
	* afb/afbpixmap.c:
	* afb/afbply1rct.c:
	* afb/afbpushpxl.c:
	* afb/afbscrinit.c:
	* afb/afbwindow.c:
	* cfb/cfb.h:
	* cfb/cfb8line.c:
	* cfb/cfbbitblt.c:
	* cfb/cfbblt.c:
	* cfb/cfbcppl.c:
	* cfb/cfbfillarc.c:
	* cfb/cfbgc.c:
	* cfb/cfbimage.c:
	* cfb/cfbline.c:
	* cfb/cfbmskbits.h:
	* cfb/cfbpixmap.c:
	* cfb/cfbply1rct.c:
	* cfb/cfbwindow.c:
	* cfb/cfbzerarc.c:
	* configure.ac:
	* dbe/dbe.c:
	* dbe/midbe.c:
	* fb/fb24_32.c:
	* fb/fbarc.c: (fbPolyArc):
	* fb/fbcompose.c:
	* fb/fbcopy.c:
	* fb/fbgc.c:
	* fb/fbimage.c:
	* fb/fboverlay.c:
	* fb/fbpict.c:
	* fb/fbpixmap.c: